<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="signup_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter Username and Password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="action_logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="forgot_password_error_message">Email is blank</string>
    <string name="forgot_password_error_title">Oops!</string>
    <string name="empty_messages_text">No new messages :(</string>
    <string name="empty_friends_text">You got no friends!</string>
    <string name="title_activity_edit_friends">Edit Friends</string>

    <string name="hello_world">Hello world!</string>
    <string name="empty_edit_friends_text">There are no other people available?!</string>
    <string name="error_title">Sorry!</string>
    <string name="menu_camera_title">Camera</string>
    <string name="error_external_storage_unavailable">External storage not available</string>
    <string name="general_error">Sorry there and an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file was toooooo large, select a new file</string>
    <string-array name="camera_choice">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="recipients_activity_no_friends">You haven\'t chosen any friends!</string>
    <string name="error_selecting_file">THere was an error with the file selected. Please try a different file</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message_sent">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="application_title">Ribbit</string>
    <string name="content_description_background">Ribbit Frog Background Image</string>
    <string name="application_subtitle">An Iksydk Project</string>
    <string name="cancel_signup_text">CANCEL</string>
    <string name="push_message">You have a new Ribbit from %s</string>
</resources>
