<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iksydk.ribbit.SignupActivity"
    style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/application_title"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"
        android:text="@string/application_subtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthContainer"
        android:orientation="vertical"
        android:layout_below="@+id/subtitle">

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/emailEditText"
            style="@style/AuthEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        android:src="@mipmap/button_divider"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/signupButton"
        style="@style/AuthButton"
        android:text="@string/signup_button_label"
        android:layout_below="@id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        />

    <Button
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:text="@string/cancel_signup_text"
        android:layout_below="@id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
