<RelativeLayout
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iksydk.ribbit.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/application_title"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"
        android:text="@string/application_subtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthContainer"
        android:layout_below="@id/subtitle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/AuthEditText"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
    </LinearLayout>


    <Button
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:text="@string/login_button_label"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/signup_text"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</RelativeLayout>
