<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.iksydk.ribbit.ForgotPasswordActivity"
                style="@style/AuthBackground">
    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/application_title"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"
        android:text="@string/application_subtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthContainer"
        android:orientation="vertical"
        android:layout_below="@+id/subtitle">
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailEditText"
            android:hint="@string/email_hint"
            style="@style/AuthEditText"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        android:src="@mipmap/button_divider"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_below="@id/editTextLayout"
        android:text="@string/forgot_password_button"
        android:layout_toLeftOf="@+id/buttonDivider"
        android:layout_marginRight="0dp"
        style="@style/AuthButton"
        />
    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_signup_text"
        android:layout_below="@id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton"
        />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
